# clipping_url_app

./: .gitignore  README.md  pyproject.toml  url_shortener.db
src/app/: main.py
src/app/logs/: log_save.py  logger.py
src/app/routers/: url.py
src/app/utils/: utils.py
src/db/: db.py  db_con.py  db_connect.py  db_func.py
