[project]
name = "cut_url_app"
version = "0.1.0"
description = "Сервис сокращения ссылок"
authors = [{name = "Milhail", email = "mikhail_pivovarov1@mail.ru"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.108.0",
    "uvicorn[standard]==0.25.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"